@@ -68,24 +68,6 @@ AC_CHECK_FUNCS([fseeko64])
 AC_TYPE_UINT16_T
 AC_TYPE_UINT32_T
 
-AC_MSG_CHECKING(for whether printf supports %ll)
-AC_COMPILE_IFELSE([AC_LANG_SOURCE([[
-#include <stdio.h>
-#include <string.h>
-#include <sys/types.h>
-int
-main()
-{
-    long long a = 160591605916059ll;
-    char t[50];
-    sprintf(t, "%lld", a);
-}
-]])],[qpdf_PRINTF_LL=yes],[qpdf_PRINTF_LL=no])
-AC_MSG_RESULT($qpdf_PRINTF_LL)
-if test "$qpdf_PRINTF_LL" = "yes"; then
-   AC_DEFINE([HAVE_PRINTF_LL], [1], [Whether printf supports %ll])
-fi
-
 AC_CHECK_FUNCS(random)
 
 # Check if LD supports linker scripts, and define conditional
