@@ -1,3 +1,9 @@
+2013-02-26  Jay Berkenbilt  <ejb@ql.org>
+
+	* Rewrite QUtil::int_to_string and QUtil::double_to_string to
+	remove internal length limits but to remain backward compatible
+	with the old versions for valid inputs.
+
 2013-02-23  Jay Berkenbilt  <ejb@ql.org>
 
 	* Bug fix: properly handle overridden compressed objects.  When
